--- a/src/client/index.jade
+++ b/src/client/index.jade
@@ -3,10 +3,10 @@ html
   head
     meta(charset='utf-8')
     meta(content='width=device-width, initial-scale=1.0, maximum-scale=1.0' name='viewport')
-    link(href='/javascripts/app.css', rel='stylesheet')
+    link(href='/dist/app.css', rel='stylesheet')
     title II2D
   body
     div#root !{ content }
     script(type='text/javascript').
       window.__INITIAL_STATE__ = !{state};
-    script(src='/javascripts/app.js')
+    script(src='/dist/app.js')
