Update webpack config

--- a/src/client/index.jade
+++ b/src/client/index.jade
@@ -9,4 +9,5 @@ html
     div#root !{ content }
     script(type='text/javascript').
       window.__INITIAL_STATE__ = !{state};
+    script(src='/dist/vendor.js')
     script(src='/dist/app.js')
